--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=https://inmobiliaria-backend-qqwv.onrender.com
+#VITE_API_URL=https://inmobiliaria-backend-qqwv.onrender.com
 VITE_CLOUDINARY_CLOUD_NAME=dskgp3yv3
 VITE_CLOUDINARY_UPLOAD_PRESET=unsigned_inmuebles
